add styles to card

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,7 +1,7 @@
 <p>login works!</p>
 <mat-card class="login-box">
     <mat-card-content>
-        <mat-card-title class="caja">INICIO DE SECIÓN</mat-card-title>
+        <mat-card-title class="card-title">Inicio de Sesion</mat-card-title>
         <mat-card-subtitle>Ingrese su usuario y contraseña</mat-card-subtitle>
         <div>
             <mat-form-field class="caja">
@@ -9,7 +9,7 @@
                 <input type="email" matInput placeholder="pat@example.com" #userEmail required>
 
             </mat-form-field>
-            <mat-form-field class="caja">
+            <mat-form-field class="caja ">
                 <mat-label>Clave: </mat-label>
                 <input type="password" matInput #userPwd required>
             </mat-form-field>
