--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,7 +1,15 @@
 .login-box{
     max-width: 400px;
+    padding: 2rem;
     margin: 20px auto;
+    border-radius: 1.5rem;
 }
+.card-title{
+  font-weight: 300;
+  margin-bottom: 1.5rem;
+}
+
 .caja{
     width: 100%;
+
 }
