--- a/src/app/registrousuario/registrousuario.component.html
+++ b/src/app/registrousuario/registrousuario.component.html
@@ -4,7 +4,7 @@
     <mat-card-subtitle>Registro de datos</mat-card-subtitle>
   </mat-card-header>
   <mat-card-content>
-    <form [formGroup] = "userForm" >
+    <form [formGroup] = "userForm">
       <mat-form-field  class="caja">
         <mat-label>Email: </mat-label>
         <input type="email" matInput formControlName="email" placeholder="pat@example.com" #userEmail required>
@@ -20,7 +20,7 @@
     </form>
   </mat-card-content>
   <mat-card-actions align="end">
-    <button mat-reised-button (click)="autservice.registrar(userEmail.value, pass.value, pass1.value)"
+    <button mat-reised-button (click)="autservice.registrar(userEmail.value, pass.value, pass1.value); closeDialog()"
       color="primary">Guardar</button>
     <button mat-reised-button color="primary" (click)="limpiarForm()">Nuevo</button>
     <button mat-reised-button color="primary" (click)="closeDialog()">Cancelar</button>
